virt01/manual/torrent/aurral/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurral-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: aurral.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: aurral-svc
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - aurral.k3s.nf.lab
    secretName: aurral-cert-tls
